# global-azure-bootcamp-melbourne-website

./: .gitignore  A3-Print-L1.docx  A3-Print-L2.docx  A3-Print-L3.docx  Melbourne 2024 - Sponsor Pack.docx  README.md
.github/workflows/: deploy-website.yml  static-web-apps-deploy.yml  template-azure-build.yml  template-azure-deploy.yml
bicep/: main.bicep
organiser-content/: Invoice-Template.docx  Melbourne 2025 - Sponsor Pack.docx  speakers-html.ps1
photos/: IMG_0490.HEIC  IMG_0491.HEIC  IMG_0494.HEIC  IMG_0495.HEIC  IMG_0497.HEIC  IMG_0498.HEIC  IMG_0500.HEIC  IMG_0503.HEIC  IMG_0505.HEIC  IMG_0508.HEIC  IMG_0509.HEIC  IMG_0511.HEIC  IMG_0512.HEIC  IMG_0513.HEIC  IMG_0514.HEIC
photos/2024/: IMG_0492.HEIC  IMG_0493.HEIC  IMG_0496.HEIC  IMG_0499.HEIC  IMG_0501.HEIC  IMG_0502.HEIC  IMG_0504.HEIC  IMG_0507.HEIC  IMG_0510.HEIC  IMG_0515.HEIC  IMG_0516.HEIC  IMG_0518.HEIC  IMG_0519.HEIC
presentation-decks/: README.md
presentation-decks/Track1-CraigMoyle-DeployingApplicationsinAKSvsContainer Apps/demo/: README.md
presentation-decks/Track2-AaronSaikovski-Python for the Azure Engineer/demo/: Makefile  demo.azcli  demo3.py  deps.txt  pyproject.toml
presentation-decks/Track2-AaronSaikovski-Python for the Azure Engineer/demo/sample_data/: standardclass.py
presentation-decks/Track2-JamesWestall-ZerotoHeroPromptEngineeringForDummies/demo/: validate_system_prompt_rule_compliance.jinja2
presentation-decks/Track3-JamesWestall-ZerotoHeroPromptEngineeringForDummies/demo/: flow.dag.yaml
src/: 2024.html  codeofconduct.html  index.html
src/assets/css/: style.css
(+28 files in other folders)
